css/style.css
/* ... */
h3 {
    font-family: "PT Sans", sans-serif;
    font-weight: 400;
    color: #333333;
    font-size: 14px;
    margin: 0em;
}

#chart h3 {
    margin-bottom: 0.5em;
}

p {
    font-family: "PT Serif", serif;
    font-size: 20px;
    font-weight: 400;
    line-height: 36px;
    font-style: normal;
    color: #333333;
    display: block;
    margin-block-start: 1em;
    margin-block-end: 1em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
}

.first-par {
    font-size: 28px;
    line-height: 44px;
}

.long-quote {
    margin-left: 2em;
    padding-left: 1em;
    border-left: 3px solid #FA7268;
    font-family: "PT Sans", sans-serif;
    font-size: 18px;
    line-height: 32px;
}

.pullquote {
    font-style: italic;
    font-size: 32px;
    font-weight: 300;
    line-height: 48px;
    margin-block-start: 1.2em;
    margin-block-end: 1.2em;
    margin-left: 1.2em;
    margin-right: 1.2em;
}

a {
    color: #333333;
    /* text-decoration: underline;
    text-decoration-color: #FA7268; */
    /* second option */
    text-decoration: none;
    border-bottom: 1.2px solid #FA7268;
}

a:hover {
    color: #FA7268;
}

body {
    width: 100%;
    /* height: 100%; */
    margin: 0px;
    padding: 0px;
    overflow-x: hidden; 
}

.central {
    width: 800px;
    margin-right: auto;
    margin-left: auto;
    padding-left: 15px;
    padding-right: 15px;
}

.full-width {
    width: 100%;
}

.figure-wrapper {
    margin-right: auto;
    margin-left: auto;
}

.row {
    /* order important so don't override new syntax with old */
    display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
    display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
    display: -ms-flexbox;      /* TWEENER - IE 10 */
    display: -webkit-flex;     /* NEW - Chrome */
    display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
}

.large {
    -ms-flex: 2 0 0;
    -webkit-flex: 2 0 0;
    flex: 2 0 0;
}

.small {
    -ms-flex: 1 0 0;
    -webkit-flex: 1 0 0;
    flex: 1 0 0;
}

.photo {
    max-width: 100%;
    height: auto;
    margin-bottom: 5px;
    margin-left: auto;
    margin-right: auto;
    display: block;
}

figcaption {
    font-family: "PT Sans", sans-serif;
    margin: 0.8em;
}

figure {
    margin-top: 30px;
    margin-bottom: 30px;
}

#text-container {
    margin: 40px;
    z-index: 6;
}

#text-container h2 {
    text-align: center;
}

#map-container {
    height: 3200px;
    z-index: 4;
}

#map {
    width: 100%;
    height: 800px;
    margin: 0;
    position: sticky;
    position: -webkit-sticky;
    top: 0;
}

.text-section {
    opacity: 0.2;
}

.text-section p {
    font-size: 16px;
    line-height: 28px;
}

.year-highlight {
    margin: 10px;
    padding: 5px;
    color: #FA7268;
    background-color: #FFFFFF;
    border: 2px solid #FA7268;
    -moz-box-shadow:    4px 4px 0px 0px #FA7268;
    -webkit-box-shadow: 4px 4px 0px 0px #FA7268;
    box-shadow:         4px 4px 0px 0px #FA7268;
}

.padding-section {
    height: 200px;
}

.padding-section-top {
    height: 200px;
}

#chart-wrapper {
    /* fixed width so don't have issues with pointer alignment */
    width: 320px;
    height: 120px;
    margin-left: auto;
    margin-right: auto;
    z-index: 7;
}

.box {
    padding: 10px;
    background-color: #ffffff;
    border: 2px solid #C0C9C9;
    -moz-box-shadow:    4px 4px 0px 0px #C0C9C9;
    -webkit-box-shadow: 4px 4px 0px 0px #C0C9C9;
    box-shadow:         4px 4px 0px 0px #C0C9C9;
}

#chart {
    height: inherit;
    z-index: 999999;
    position: relative;
}

#chart-placeholder {
    height: 200px;
}

#chart-container {
    /* z-index: 5; */
    position: absolute;
    /*  adjust dynamicaly via code depending on the height of the containers above */
    top: 500px;
    height: 3320px;
    width: 340px;
    margin-left: calc((100% - 340px)/2);
}

#chart-wrapper {
    position: sticky;
    position: -webkit-sticky;
    top: 10px;
    margin-top: 5px;
    margin-bottom: 5px;
}

.text-key {
    padding: 2px;
    /* border-radius: 4px; */
    background-color: #FA7268;
    color: #FFFFFF;
    font-family: "PT Sans", sans-serif;
}

.text-key a {
    border-bottom: none;
    color: #FFFFFF;
}

p .text-key:hover {
    background-color: rgba(250, 114, 104, 0.6);
}

.axis text {
    color: #333333;
    font-family: "PT Sans", Arial, sans-serif;
}

.axis line {
    stroke: #333333;
}

.axis path {
    stroke: #333333;
}

#triangle {
    stroke: #FA7268;
    stroke-width: 1;
    fill: #FA7268;
    opacity: 0;
}

#rect-1 {
    stroke: #FA7268;
    fill: #FA7268;
}

#rect-2 {
    fill: white;
    stroke: #FA7268;
}

#tooltip text {
    font-family: "PT Sans", sans-serif;
    font-size: 13px;
    fill: #FA7268;
}

.bar {
    stroke: #FFFFFF;
    stroke-width: 0.5;
}

.logo {
    position: fixed;
    top: 10px;
    left: 15px;
    z-index: 9000;
    height: 35px;
    width: 110px;
    opacity: 0.4;
    fill:#333333;
}

#logo-mobile {
    display: none;
}

.logo:hover {
    fill: #FA7268;
    opacity: 1;
}

.share-icons {
    position: fixed;
    top: 10px;
    right: 10px;
    z-index: 9000;
    color: #ffffff;
    font-size: 12px;
    padding: 5px;
    padding-top: 0px;
}

.share-icons .fa-stack {
    opacity: 0.4;
}

.share-icons .fa-stack:hover {
    opacity: 1;
}

.mapboxgl-popup {
    max-width: 150px;
}

.mapboxgl-popup-content {
    text-align: center;
}

#map-key {
    position: absolute;
    bottom: 20px;
    left: 20px;
    z-index: 99999;
}

.colour-key {
    width: 12px;
    height: 12px;
    -webkit-border-radius: 25px;
    -moz-border-radius: 25px;
    border-radius: 25px;
    display: inline-block;
    margin-right: 3px;
}

ul {
    list-style-type: none;
}

#list-group {
    padding: 0px;
    margin: 0px;
}

.list-group-item {
    font-family: "PT Sans", Georgia, sans-serif;
    font-size: 13px;
    line-height: 22px;
}

#intro-background {
    position: absolute;
    width: 100%;
    height: 550px;
    z-index: -5;
    overflow: hidden;
}
/* ... */

